--- a/.devdbrc
+++ b/.devdbrc
@@ -2,5 +2,9 @@
   {
     "type": "sqlite",
     "path": "c:\\Users\\thebr\\Documents\\projet\\natation-3\\database\\database.sqlite"
+  },
+  {
+    "type": "sqlite",
+    "path": "/home/yannis/Bureau/projets/Natation/database/database.sqlite"
   }
 ]
